--- a/architecture.html
+++ b/architecture.html
@@ -30,7 +30,7 @@
     </div>
     </nav>
 </header>
-<main id="skip" class="gallery">
+<main id="skip" class="gallery" aria-label="Main content of architecture gallery">
 <h1><span class="typewriter">Architecture </span></h1>
 <p>Here are my top favorite pieces of architecture from a variety of periods.</p>
 <div class="gallery_grid">
