--- a/art.html
+++ b/art.html
@@ -30,7 +30,7 @@
     </div>
     </nav>
 </header>
-<main id="skip" class="gallery">
+<main id="skip" class="gallery" aria-label="Main content of art gallery">
 <h1><span class="typewriter">Art </span></h1>
 <p>Here are my top favorite pieces of art from a variety of periods.</p>
 <div class="gallery_grid">
