--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 </header>
-<main class="intro-gallery" id="skip">
+<main class="intro-gallery" id="skip" aria-label="Introduction of gallery">
 <h1><span class="typewriter"> Curated Lines </span></h1>
 <div class="intro">
 <p>Welcome to <em>Lines of Thought</em>—a personal archive of artworks, architecture, and sculpture that have lingered with me across time, style, and place.</p>
@@ -36,8 +36,6 @@
 <p>Alongside each, you’ll find my reflections—thoughts that trace the emotional and historical contours of form, light, and meaning.</p>
 <p>Thank you for stepping into this conversation across centuries.</p>
 </div>
-</main>
-<main class=intro-gallery>
 <section class="collection-preview">
   <h2>Inside the Collection</h2>
   <div class="preview-grid">
