--- a/sculpture.html
+++ b/sculpture.html
@@ -30,7 +30,7 @@
     </div>
     </nav>
 </header>
-<main id="skip" class="gallery">
+<main id="skip" class="gallery" aria-label="Main content of sculpture gallery">
 <h1><span class="typewriter">Sculpture</span></h1>
 <p>Here are my top favorite pieces of sculptures from a variety of periods.</p>
 <div class="gallery_grid">
