--- a/bibliography.html
+++ b/bibliography.html
@@ -26,7 +26,7 @@
         </div>
         </nav>
     </header>
-    <main id="skip" class="bibliography">
+    <main id="skip" class="bibliography" aria-label="Bibliography">
         <h1><span class="typewriter">Bibliography</span></h1>
         <p>Here are my sources that I have used to write my thoughts regarding each piece.</p>
       
