--- a/bibliography.html
+++ b/bibliography.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <main id="skip" class="bibliography" aria-label="Bibliography">
+        <a class = "skip" href="#skip">Skip to Main Content</a>
         <h1><span class="typewriter">Bibliography</span></h1>
         <p>Here are my sources that I have used to write my thoughts regarding each piece.</p>
       
