--- a/art.html
+++ b/art.html
@@ -14,7 +14,7 @@
 <!-- Navigation bar code taken from Flex homework -->
 <body>
 <header>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
+    <a class = "skip" href="#main">Skip to Main Content</a>
     <nav clas="navbar">
         <div class="nav_container">
         <a href="home.html" class="logo_link">
