--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-<a class = "skip" href="#skip">Skip to Main Content</a>
+<a class = "skip" href="#main">Skip to Main Content</a>
     <nav clas="navbar">
       <div class="nav_container">
       <a href="home.html" class="logo_link">
